added  new blocks

--- a/src/html/_landing.html
+++ b/src/html/_landing.html
@@ -178,4 +178,188 @@
       </div>
     </div>
   </div>
+
+  <div class="landing-comand">
+    <div class="container">
+      <div class="landing-comand__inner">
+        <div class="landing-comand__info">
+          <h3>
+            Люди — <br>
+            наш самый главный <br>
+            актив и гордость!
+          </h3>
+
+          <p>
+            Наш самый главный ресурс это крепкая команда объединённая едиными целями и ценностями.
+          </p>
+
+          <p>
+            Все сотрудники нашей компании на постоянной основе проходят необходимые обучения и подтверждают свою
+            компетенцию соответствующими сертификатами.
+          </p>
+
+          <a href="#" download="">
+            Смотреть сертификаты
+
+            <img src="./img/landing/find_in_page.svg" alt="find_in_page">
+          </a>
+        </div>
+
+        <div class="landing-comand__picture">
+          <img src="./img/landing/landing-comand-pic.png" alt="команда">
+
+          <div class="landing-comand__video">
+            <img src="./img/landing/landing-comand-video-bg.png" alt="video-bg">
+
+            <a class="landing-comand__video-play" href="#">
+              Смотреть видео
+              <img src="./img/landing/play_circle.svg" alt="play_circle">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="landing-others">
+    <div class="container">
+      <div class="landing-others__inner">
+
+        <div class="landing-others__after">
+          <h3>Что будет после внедрения?</h3>
+
+          <p>У вас остаются все материалы, и мы продолжаем вас сопровождать</p>
+
+          <ul>
+            <li style="background-image: url('./img/landing/landing-others-after-1.png');">
+              <p>
+                База знай <br>
+                <span>с подробными пошаговыми инструкциями всех процессов в вашей CRM</span>
+              </p>
+            </li>
+
+            <li style="background-image: url('./img/landing/landing-others-after-2.png');">
+              <p>
+                Видео уроки по работе системы. <br>
+                <span> Новые сотрудники легко научатся работать в CRM без траты вашего времени</span>
+              </p>
+            </li>
+
+            <li style="background-image: url('./img/landing/landing-others-after-3.png');">
+              <p>
+                Блок-схемы лидов/продаж и д.р. <br>
+                <span>Все сложные процессы в простой и понятной форме.</span>
+              </p>
+            </li>
+
+            <li style="background-image: url('./img/landing/landing-others-after-4.svg');">
+
+              <div class="landing-others__after-info">
+                <p>
+                  Пожизненная техническая поддержка <span>после внедрения</span>
+                </p>
+
+                <h4>
+                  Ключевые инструменты бизнеса <span>должны работать корректно и без перебоев</span>
+                </h4>
+
+                <div class="landing-others__after-comand">
+                  <p>
+                    Команда технической поддержки <br>
+                    Киселев Групп к вашим услугам
+                  </p>
+
+                  <ul>
+                    <li>
+                      <img src="./img/landing/landing-others-comand-1.png" alt="Дмитрий">
+
+                      <h5>Дмитрий</h5>
+                    </li>
+
+                    <li>
+                      <img src="./img/landing/landing-others-comand-2.png" alt="Максим">
+
+                      <h5>Максим</h5>
+                    </li>
+
+                    <li>
+                      <img src="./img/landing/landing-others-comand-3.png" alt="Иван">
+
+                      <h5>Иван</h5>
+                    </li>
+
+                    <li>
+                      <img src="./img/landing/landing-others-comand-4.png" alt="Дмитрий">
+
+                      <h5>Дмитрий</h5>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="landing-others__after-picture">
+                <img src="./img/landing/landing-others-after-integrator.png" alt="Дмитрий интегратор">
+
+                <div class="get-quote__employee-info">
+                  <h4 class="get-quote__employee-name">
+                    Дмитрий
+                  </h4>
+
+                  <p class="get-quote__employee-position">
+                    интегратор
+                  </p>
+                </div>
+              </div>
+
+            </li>
+          </ul>
+        </div>
+
+        <div class="landing-others__free">
+          <div class="landing-others__free-info">
+            <h3>
+              Посетите бесплатную экскурсию <br>
+              <span>в наш Битрикс24</span>
+            </h3>
+
+            <ul>
+              <li>
+                <img src="./img/landing/people.svg" alt="">
+
+                <p>На демонстрации вы увидите как должна работать настроенная система и как решить ваши задачи.</p>
+              </li>
+
+              <li>
+                <img src="./img/landing/clock.svg" alt="">
+
+                <p>
+                  Онлайн встреча в zoom. <br>
+                  В среднем занимает ~ 45 минут
+                </p>
+              </li>
+            </ul>
+
+            <a class="primary-btn" href="#">Записаться на экскурсию</a>
+          </div>
+
+          <div class="landing-others__free-picture">
+            <img class="landing-others__free-notebook" src="./img/landing/landing-others-free-notebook.png" alt="">
+
+            <div class="get-quote__employee">
+              <img class="get-quote__employee-pic" src="./img/landing/Наталья 1.png" alt="">
+
+              <div class="get-quote__employee-info">
+                <h4 class="get-quote__employee-name">
+                  Наталья
+                </h4>
+
+                <p class="get-quote__employee-position">
+                  Руководитель <br>отдела
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
