--- a/src/html/_landing.html
+++ b/src/html/_landing.html
@@ -369,7 +369,8 @@
             </a>
 
             <div class="landing-system__main" data-landing-system-step>
-              <div class="landing-system__dark">
+              <div class="landing-system__dark"
+                style="background-image: url('./img/landing/landing-system__step-pic-4-bg.svg');">
                 <div class="landing-system__progresses">
                   <div class="landing-system__progress active">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -499,7 +500,8 @@
             </div>
 
             <div class="landing-system__main" data-landing-system-step style="display: none;">
-              <div class="landing-system__dark">
+              <div class="landing-system__dark"
+                style="background-image: url('./img/landing/landing-system__step-pic-4-bg.svg');">
                 <div class="landing-system__progresses">
                   <div class="landing-system__progress active-border">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -633,7 +635,8 @@
             </div>
 
             <div class="landing-system__main" data-landing-system-step style="display: none;">
-              <div class="landing-system__dark">
+              <div class="landing-system__dark"
+                style="background-image: url('./img/landing/landing-system__step-pic-4-bg.svg');">
                 <div class="landing-system__progresses">
                   <div class="landing-system__progress active-border">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -769,7 +772,8 @@
             </div>
 
             <div class="landing-system__main" data-landing-system-step style="display: none;">
-              <div class="landing-system__dark">
+              <div class="landing-system__dark"
+                style="background-image: url('./img/landing/landing-system__step-pic-4-bg.svg');">
                 <div class="landing-system__progresses">
                   <div class="landing-system__progress active-border">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
