added new blocks for new page

--- a/src/html/_landing.html
+++ b/src/html/_landing.html
@@ -243,7 +243,7 @@
         <div class="landing-comand__picture">
           <img src="./img/landing/landing-comand-pic.png" alt="команда">
 
-          <div class="landing-comand__video">
+          <div href="#" class="landing-comand__video">
             <img src="./img/landing/landing-comand-video-bg.png" alt="video-bg">
 
             <a class="landing-comand__video-play" href="#">
