--- a/src/html/_automatic-hr.html
+++ b/src/html/_automatic-hr.html
@@ -735,7 +735,7 @@
               <div class="bi__analitics-price">
                 <img src="./img/bi/card-pos.svg" alt="card-pos">
 
-                от 1 000 000 <span>₽</span>
+                от 620 000 <span>₽</span>
               </div>
 
             </div>
